--- a/Android-WardrobeApp/app/src/main/res/layout/fragment_wardrobe.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/fragment_wardrobe.xml
@@ -8,6 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="edu.northeastern.wardrobeapp.android_wardrobeapp.WardrobeActivity">
+    tools:context="edu.northeastern.wardrobeapp.android_wardrobeapp.WardrobeFragment">
 
 </RelativeLayout>
