Initialize more firebase settings Add BaseActivity class for others to extend from

--- a/Android-WardrobeApp/app/src/main/res/menu/menu_main.xml
+++ b/Android-WardrobeApp/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,6 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item android:id="@+id/menu_sign_out"
+        android:title="@string/menu_sign_out" />
 </menu>
