Change some variables and clean up useless code

--- a/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
@@ -51,15 +51,16 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Login"/>
+            android:text="@string/label_sign_in"
+            android:onClick="login"/>
 
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
+            android:text="@string/link_no_account_sign_up"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:textSize="16sp"/>
 
     </LinearLayout>
 </ScrollView>
