--- a/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingRight="24dp"
+        android:weightSum="1">
 
         <ImageView android:src="@drawable/logo"
             android:layout_width="wrap_content"
@@ -28,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="@string/email1" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
@@ -41,25 +42,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/password"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
+            android:layout_width="349dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Login"/>
+            android:text="@string/log_in" />
 
-        <TextView android:id="@+id/link_signup"
-            android:layout_width="fill_parent"
+        <Button
+            android:id="@+id/button2"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
-            android:gravity="center"
-            android:textSize="16dip"/>
+            android:text="@string/sign_up1" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="322dp"
+            android:layout_height="25dp"
+            android:text="@string/forgot_password"
+            android:textAlignment="center"
+            android:textColor="@color/colorAccent"
+            android:textColorLink="@color/colorAccent"/>
 
     </LinearLayout>
 </ScrollView>
