--- a/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -38,37 +39,40 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_password"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="@string/password"/>
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/btn_login"
-            android:layout_width="349dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
+            android:onClick="Login"
             android:padding="12dp"
-            android:text="@string/log_in" />
+            android:text="@string/label_sign_in" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_sign_up"
             style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sign_up1" />
+            android:text="@string/label_sign_up"
+            android:onClick="SignUp"/>
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="322dp"
+            android:id="@+id/link_forgot_pass"
+            android:layout_width="match_parent"
             android:layout_height="25dp"
             android:text="@string/forgot_password"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
-            android:textColorLink="@color/colorAccent"/>
+            android:textColorLink="@color/colorAccent" />
 
     </LinearLayout>
 </ScrollView>
