--- a/Android-WardrobeApp/app/src/main/res/values/styles.xml
+++ b/Android-WardrobeApp/app/src/main/res/values/styles.xml
@@ -8,10 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Dialog color (Progress Spinner) -->
     <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@color/white</item>
         <item name="android:textColorPrimary">@color/iron</item>
-        <item name="android:background">@color/primary</item>
+        <item name="android:background">@color/jet</item>
     </style>
 
 
