--- a/Android-WardrobeApp/app/src/main/res/layout/fragment_wardrobe.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/fragment_wardrobe.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_wardrobe"
     android:layout_width="match_parent"
@@ -10,4 +11,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.northeastern.wardrobeapp.android_wardrobeapp.WardrobeFragment">
 
+
+    <Button
+        android:id="@+id/btn_add_clothing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Clothing"
+        android:onClick="AddClothing"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="169dp" />
 </RelativeLayout>
