--- a/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
-            android:onClick="Login"
             android:padding="12dp"
             android:text="@string/label_sign_in" />
 
@@ -62,8 +61,9 @@
             style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="true"
             android:text="@string/label_sign_up"
-            android:onClick="SignUp"/>
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/link_forgot_pass"
