WardrobeFragment get images for user in Firebase. Upgrade gradle, add Picasso

--- a/Android-WardrobeApp/app/src/main/res/menu/menu_main.xml
+++ b/Android-WardrobeApp/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,10 @@
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
-    <item android:id="@+id/menu_sign_out"
+    <item
+        android:id="@+id/menu_add_clothing"
+        android:title="@string/menu_add_clothing" />
+    <item
+        android:id="@+id/menu_sign_out"
         android:title="@string/menu_sign_out" />
 </menu>
