--- a/Android-WardrobeApp/app/src/main/res/layout/fragment_wardrobe.xml
+++ b/Android-WardrobeApp/app/src/main/res/layout/fragment_wardrobe.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_wardrobe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <Button
-        android:id="@+id/btn_add_clothing"
-        android:layout_width="124dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="250dp"
-        android:onClick="AddClothing"
-        android:text="Add Clothing"
-        app:layout_constraintHorizontal_bias="0.81"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-</android.support.constraint.ConstraintLayout>
+    android:weightSum="1">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/wardrobe_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp" />
+
+</LinearLayout>
